# mobie-napari-bridge

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
src/: debug_runner.py
src/mobie_napari_bridge/: __init__.py  _widget.py  debug_runner.py  napari.yaml  util.py
src/mobie_napari_bridge/_tests/: test_reader.py  test_sample_data.py  test_util.py  test_widget.py  test_writer.py  testutils.py
