[metadata]
name = mobie-napari-bridge
version = attr: mobie_napari_bridge.__version__
description = A plugin to interact with MoBIE projects
long_description = file: README.md
long_description_content_type = text/markdown

author = Martin Schorb
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing

url = https://github.com/mobie/mobie-napari-bridge
project_urls =
        Bug Tracker = https://github.com/mobie/mobie-napari-bridge/issues
        Documentation = https://github.com/mobie/mobie-napari-bridge#README.md
        Source Code = https://github.com/mobie/mobie-napari-bridge
        User Support = https://github.com/mobie/mobie-napari-bridge/issues

[options]
packages = find:
install_requires =
    numpy
    qtpy
    git
    napari-ome-zarr

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    mobie-napari-bridge = mobie_napari_bridge:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
